--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "postinstall": "prisma generate",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:seed": "prisma db seed",
-    "import:cafes": "tsx scripts/importCafes.ts"
+    "import:cafes": "tsx scripts/importCafes.ts",
+    "import:names": "tsx scripts/importByName.ts"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.4.0",
