feat(admin): expand dashboard, import tools, and diacritic search

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "db:migrate:deploy": "prisma migrate deploy",
     "db:seed": "prisma db seed",
     "import:cafes": "tsx scripts/importCafes.ts",
-    "import:names": "tsx scripts/importByName.ts"
+    "import:names": "tsx scripts/importByName.ts",
+    "import:bay": "tsx scripts/import-metro-cafes.ts Bay",
+    "import:nyc": "tsx scripts/import-metro-cafes.ts NYC"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.4.0",
